[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Buildings/Tower/Tower.gd" type="Script" id=2]
[ext_resource path="res://src/UI/TowerUI/TowerUI.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 93.9742, 94.6612 )

[node name="Tower" type="Node2D"]
position = Vector2( 142.54, 135.209 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ButtonBuild" type="Button" parent="."]
margin_left = -33.395
margin_top = -14.629
margin_right = 31.605
margin_bottom = 18.371
text = "BUILD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionUI" type="Position2D" parent="."]
position = Vector2( 125.435, -110.774 )

[node name="TowerUI" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="pressed" from="ButtonBuild" to="." method="_on_ButtonBuild_pressed"]
